Main modules added
added location, payment, and helper modules
setup some basic paths
setup basic authentication (not enabled currently)
